--- a/api/views/paste.html
+++ b/api/views/paste.html
@@ -17,46 +17,32 @@
             color: #fff;
             padding: 20px;
             text-align: center;
-            margin-bottom: 20px;
         }
         
         form {
             background-color: #202123;
-            padding: 50px;
+            padding: 20px;
             text-align: center;
+            margin: 20px;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            width: 100%;
-            margin: 0 auto;
         }
         
         textarea {
             width: 100%;
-            height: 250px;
+            height: 200px;
             padding: 10px;
             font-size: 16px;
             color: #fff;
             background-color: #202123;
             border: 1px solid #ccc;
+            pointer-events: none; /* Disable pointer events */
             border-radius: 5px;
             resize: vertical;
-            margin-bottom: 10px;
-        }
-        
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            font-size: 16px;
-            color: #fff;
-            background-color: #202123;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-bottom: 10px;
         }
         
         input[type="submit"] {
-            padding: 10px;
+            padding: 10px 20px;
             font-size: 16px;
             background-color: #202123;
             color: #fff;
@@ -72,31 +58,18 @@
             background-color: #202123;
             border: 1px solid #ccc;
             border-radius: 5px;
-            width: 105%;
-            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to shareaf</h1>
-        <p id="randomword"></p>
+        <h1>paste name : {{.name}}</h1>
     </header>
-    <form method="POST" action="/pastes">
-        <textarea id="data" name="data" placeholder="Enter paste data" required></textarea>
+
+    <form>
+        <h2 style="color:white;">Paste itself:</h2>
+        <textarea id="textArea" readonly>{{.paste}}</textarea>
         <br>
-        <input type="text" name="name" placeholder="Enter paste name" required>
-        <br>
-        <select id="timeSelector" name="time">
-            <option value="30">30 sec</option>
-            <option value="60">60 sec</option>
-            <option value="600">10 min</option>
-            <option value="3600">60 min</option>
-            <option value="43200">12 hours</option>
-            <option value="86400">24 hours</option>
-        </select>
-        <br>
-        <input type="submit" value="Share">
     </form>
 </body>
 </html>
