--- a/api/views/home.html
+++ b/api/views/home.html
@@ -29,6 +29,9 @@
             max-width: 400px;
             width: 100%;
             margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            gap: 4px
         }
         
         textarea {
@@ -56,13 +59,20 @@
         }
         
         input[type="submit"] {
-            padding: 10px;
+            width: 422px;
+            height: 40px;
             font-size: 16px;
             background-color: #202123;
             color: #fff;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            transition: all 0.1s ease-in-out;
+            margin: 0 auto;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #2a2b2c;
         }
 
         select {
